Change typeface and fix gradient bug on Safari.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -17,7 +17,7 @@ body {
 
 body,
 textarea {
-    font-family: "proxima-nova", Georgia, serif;
+    font-family: "museo-sans", sans-serif;
 }
 
 .container {
@@ -150,14 +150,20 @@ textarea {
 
 .writing {
     position: relative;
+    -webkit-transition: none;
     transition: none;
 }
 
 .writing:after {
-    transition: none;
     -webkit-transition: none;
+    transition: none;
     content: "";
-    background: linear-gradient(to bottom, transparent, #f9f9f9);
+    background: -moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(249,249,249,1) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0)), color-stop(100%,rgba(249,249,249,1))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(249,249,249,1) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(249,249,249,1) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(249,249,249,1) 100%); /* IE10+ */
+    background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(249,249,249,1) 100%); /* W3C */
     height: 50px;
     width: 100%;
     position: absolute;
@@ -172,9 +178,9 @@ textarea {
 .editable {
     display: block;
     font-size: 1.49em;
-    font-weight: 300;
+    font-weight: 200;
     width: 100%;
-    line-height: 1.55;
+    line-height: 1.56;
     height: 60%;
     background: transparent;
     border: none;
